Created High Scores HTML

--- a/assets/style.css
+++ b/assets/style.css
@@ -15,10 +15,10 @@
     color: white;
 }
 /* Created questions styling */
-#questions {
+#questionDiv {
     margin: 20px;
 }
 /* Created timer styling */
-#timer {
+#startTimer {
     float: right;
 }
