--- a/assets/style.css
+++ b/assets/style.css
@@ -68,8 +68,61 @@ li {
     font-size: 18px;
     color: white;
 }
-/* reate div styling */
+/* Create submit button styling */
+#Submit {
+    background-color: purple;
+    margin-left: 33%;
+    padding: 15px 32px;
+    font-size: 20px;
+    color: white;
+}
+/* Create div styling */
 #createDiv {
     margin-top: 20px;
     border-top: 1px solid lightgray;
+}
+@media screen and (max-width: 786px) {
+    /* Created workable media condtent to resize when on different devices */
+        body {
+            max-width: 786px;
+        }
+    /* Re-sized main content to fit proper devices  */
+    #wrapper {
+        position: absolute;
+        left: 20%;
+    }
+
+    a {
+        margin-left: 20%;
+    }
+        #goBack {
+            
+            position: relative;
+            left: 55%;
+        }
+
+        #clear {
+            
+            position: relative;
+            right: 5%;
+            
+        }
+    }
+        
+    /* A Media Query max-width: 640px */
+    @media screen and (max-width: 640px) {
+     /* Resized content to fit 640px  */
+     body {
+            min-width: 640px;
+        }
+    /* Resized main-content to fit 640px  */
+    #wrapper {
+        position: absolute;
+        left: 10%;
+    }
+      a {
+          margin-left: 10%;
+      }
+
+     
 }
